# uni-api

./: .env.sample  .gitignore  alembic.ini  bot.yml  help.md  main.py  path.py  pyproject.toml  readme.md  settings.py
alembic/: env.py
alembic/versions/: 032ced98825d_initial_migration.py  7240f32370af_init.py  dd55b5b54531_initial_migration.py  e257c6a7b6c8_initial_migration.py  f764e0ca316c_initial_migration.py
auth/: oauth.py  security.py
cases/: __init__.py
cases/rama/: __init__.py
cases/zhangyu/: main_parse_pdf.py  main_parse_pdfs.py  pdf_processing_results.xlsx
cases/zhangyu/src/: config.py  model_loader.py  pdf_parser.py
config/: bot.yml
data/: install-clash.sh
data/clash/: clash.service
data/clash/config/: cache.db  config.yaml
database/: utils.py
database/models/: user.py
dependencies/: credits.py
docs/sample/: card.fail.json  card.success.json
docs/sample/card/fail/: 2.json
models/: __init__.py  thoughts.py  transaction.py  user.py
recordings/: Audio Recording 2024-11-17 at 20.47.07.m4a
router/: __init__.py  account.py  cases.py  llm.py  oss.py  thoughts.py  vpn.py
router/map/: __init__.py  baidu.py
router/sport/: __init__.py
router/uni_pusher/: __init__.py  test_uncurl.py  types.py
router/uni_pusher/v1/: jike_post_content.py  jike_upload_image_access_token.py  zsxq_get_profile.py  zsxq_post_content.py
router/vpn/: vpn.py
router/wechat/: __init__.py
router/wechat/official_account/: article.py
schemas/: user.py
src/: path.py  schema.py  utils.py
src/agent/: core.py  schema.py
src/agents/: article-summariser.prompt.0.2.1.md  article-summariser.prompt.0.2.2.md  article-summariser.prompt.0.2.3.md  article-summariser.prompt.0.3.0.md  article-summariser.prompt.0.4.0.md  article-summariser.prompt.0.5.0.md  conclude-article.prompt.md  concule-article.sample.md  default.agent.yml  query_prompt.py  summariser.agent.yml  summariser.sample.2.md
src/core/: oauth.py  security.py
src/dependencies/: credits.py
src/llm/: utils.py
src/llm/providers/: _base.py  minimax.py  moonshot.py  openai.py  zhipu.py
src/llm_provider/: base.py  moonshot.py  openai.py  utils.py
src/models/: user.py
src/prompts/: conclude-wxmp-article.prompt.0.0.1.md  conclude-wxmp-article.prompt.0.1.2.md  conclude-wxmp-article.prompt.md
src/router/: __init__.py  account.py  agent.py  common.py  curl2route.py  curl2route2.py  jike.py  llm.py  oss.py  spider.py  test_agent.py  vpn.py  wechat.py  zsxq.py
src/router/badminton/: main.py  router.py
src/router/badminton/src/: types.py  utils.py
src/router/badminton/tsinghua/: query.py
src/router/cases/: __init__.py
src/router/cases/rama/: __init__.py  lofter.py  pythonmonkey-1.test.py  pythonmonkey-2.test.py
src/router/cases/zhangyu/: __init__.py  main_parse_pdfs.py  pdf_parser.py
src/router/demo/: rama.py
src/router/demo/rama/: lofter.py  pixiv.py
src/router/map/: baidu.py  gaode.py  tencent.py
src/router/uni_pusher/: __init__.py  _curl2route.py  jike.py  jike2.py  jike_get_profile.py  jike_post_content.py  jike_read_profile.py  jike_search.py  jike_search_quanzi.py  jike_upload_image.py  jike_upload_image_access_token.py  types.py  zsxq.py  zsxq_get_profile.py  zsxq_post_content.py
src/router/wechat/: __init__.py
src/scenario/: conclude_wxmp_article.py
src/schema/: bot.py  llm.py
src/utils/: api.py  compress_content.py  error_handler.py  markdown.py  path.py
src/utls/: path.py
src/wechat/: check_env.py  simulate_card_1.py  simulate_card_2.py  uni_parser_bot.py  wechaty_provider.py
src/wechat/.wechaty/: job.db
tests/: test_jinja.py  test_pydantic_dump.py
utils/: database.py  log.py  oss.py  path.py
utils/dependencies/: credits.py
(+25 files in other folders)
