[tool.poetry]
name = "uni-api"
version = "0.1.0"
description = ""
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
openai = ">=1.0"
loguru = "^0.7.2"
requests = "^2.31.0"
zhipuai = "^2.0.1"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.12.1"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
